# binary_work

./: .gitignore  CMakeLists.txt  CMakePresets.json  PS_Lab1.sln
PSConsole/: PSConsole.vcxproj  PSConsole.vcxproj.filters  Testfile2.prd  Testfile2.prs  testfile.prd  testfile.prs
PSConsole/src/: main.cpp
PSConsole/src/core/: BinaryIO.cpp  BinaryIO.h  ConsoleUtf8.cpp  ConsoleUtf8.h  Errors.h  UtfConv.cpp  UtfConv.h
PSConsole/src/domain/: Models.h  Parsing.cpp  Parsing.h
PSConsole/src/infra/: ProductFile.cpp  ProductFile.h  SpecFile.cpp  SpecFile.h
PSConsole/src/services/: CatalogService.cpp  CatalogService.h  CommandRegistry.cpp  CommandRegistry.h  Commands.cpp  Commands.h
PSConsole/x64/Debug/: PSConsole.exe.recipe  vc143.idb
PSConsole/x64/Debug/PSConsole.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  PSConsole.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
PSQtGui/: ComponentsDialog.cpp  ComponentsDialog.h  MainWindow.cpp  MainWindow.h  OpenDialog.cpp  OpenDialog.h  PSQtGui.vcxproj  PSQtGui.vcxproj.filters  SpecItemDialog.cpp  SpecItemDialog.h  SpecificationDialog.cpp  SpecificationDialog.h
